add simple trace generator

--- a/experiments/profiling/visualize_traces.ipynb
+++ b/experiments/profiling/visualize_traces.ipynb
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using port 7400 for cluster\n",
+      "Using port 7105 for cluster\n",
       "Using port 16006 as local port\n"
      ]
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e838307b",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "83d13d16",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
       "\n",
       "To open TensorBoard on another machine:\n",
       "\t1. In a local shell, run:\n",
-      "\t   ssh -L 16006:gcn9.local.snellius.surf.nl:7400 scur1948@snellius.surf.nl\n",
+      "\t   ssh -L 16006:gcn9.local.snellius.surf.nl:7105 scur1948@snellius.surf.nl\n",
       "\t   (enter your password if prompted)\n",
       "\n",
       "\t2. Open a browser (NOT Safari) and go to:\n",
@@ -198,7 +198,10 @@
     }
    ],
    "source": [
-    "launch_tensorboard(\"logs/vgg_compile\")"
+    "# Example from the lecture\n",
+    "launch_tensorboard(\"logs/vgg_compile\")\n",
+    "# Or show the example from example_trace.py\n",
+    "# launch_tensorboard(\"logs/simple_test\")"
    ]
   },
   {
@@ -251,7 +254,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_venv2",
+   "display_name": "profile_venv",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
